# template

./: .Rprofile  .gitignore  .zshrc  DESCRIPTION  Dockerfile  LICENSE  Makefile  README.md  SETUP.md  arf.toml  packages.R  pyproject.toml
.devcontainer/: devcontainer.json
config/: config.yaml
docs/: adding-dependencies.md  developing-in-container.md
sys_deps/: sys_deps.sh
test/: config.yaml  generate_test_data.R
test/resources/data_type_1/: test_data_type_1.csv
test/resources/data_type_2/: test_data_type_2.csv
workflow/: Snakefile
workflow/scripts/functions/: theme_better.R
