[project]
name = "project-python-env"
version = "0.1.0"
description = "Python dependencies for the pipeline (parallel to DESCRIPTION for R)"
requires-python = ">=3.11"
dependencies = [
    "snakemake==9.14.2",
    "ipykernel",
    # add future Python deps here, e.g.:
    # "pandas",
    # "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# no actual package code — this file exists only to declare dependencies,
# mirroring how DESCRIPTION declares R dependencies for pak.
bypass-selection = true

# ---------------------------------------------------------------------------
# Pixi reads [project.dependencies] above as PyPI dependencies automatically.
# This table only adds the channel/platform info Pixi needs on top of that —
# it does not duplicate the dependency list.
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]
